<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:layout_margin="24dp"
        android:textSize="24sp">
    </TextView>

    <LinearLayout
        android:id="@+id/cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title">

        <Spinner
            android:id="@+id/cityFrom"
            android:prompt="@string/cityFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/border_1"/>

        <Spinner
            android:id="@+id/cityWhere"
            android:prompt="@string/cityWhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/border_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cities">

        <TextView
            android:id="@+id/dateDeparture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateDeparture"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/border_2">
        </TextView>

        <TextView
            android:id="@+id/dateArrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateArrival"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/border_2">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dates"
        android:orientation="vertical">

        <EditText
            android:id="@+id/adults"
            android:hint="@string/adults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:autofillHints="0"
            android:background="@drawable/border_1">
        </EditText>

        <EditText
            android:id="@+id/children"
            android:hint="@string/children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:autofillHints="0"
            android:background="@drawable/border_1"/>

        <EditText
            android:id="@+id/babies"
            android:hint="@string/babies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:autofillHints="0"
            android:background="@drawable/border_1"/>
    </LinearLayout>

    <Button
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:padding="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/persons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>